syntax = "proto3";

package usermanagement;

service UserManagement {
  rpc CreateUser(CreateUserRequest) returns (UserResponse) {}
  rpc GetUser(GetUserRequest) returns (UserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (UserResponse) {}
  rpc ImportUsers(ImportUsersRequest) returns (ImportUsersResponse) {}
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message UserResponse {
  User user = 1;
  string message = 2;
}

message ImportUsersRequest {
  string csv_file_path = 1;
}

message ImportUsersResponse {
  int32 imported_count = 1;
  string message = 2;
}
